<resources>
    <string name="app_name">Android23</string>
    <string name="coroutines_finished">Coroutines Finished</string>
    <string name="my_job_here_is_done">My job here is done.</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="open_fragment">OPEN_FRAGMENT</string>
    <string name="coroutines_stop">Coroutines stop.</string>
    <string name="settings_extra">SETTINGS</string>
    <string name="main_extra">MAIN</string>
    <string name="from_notification_to_mainfragment">From notification to MainFragment</string>
    <string name="cancel">Cancel</string>
    <string name="notifications_are_disabled">Notifications are disabled</string>
    <string name="please_enable_notifications_in_the_application_settings">Please enable notifications in the application settings</string>
    <string name="execute">Execute</string>
    <string name="stop_on_background">Stop on background</string>
    <string name="async">Async</string>
    <string name="title">Title</string>
    <string name="main_text">Main Text</string>
    <string name="create_notification">Create notification</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="urgent">Urgent</string>
    <string name="private_rb">Private</string>
    <string name="public_rb">Public</string>
    <string name="big_text">Big Text</string>
    <string name="buttons">Buttons</string>
    <string name="save">Save</string>
</resources>